--- a/cp2077modlist.html
+++ b/cp2077modlist.html
@@ -47,6 +47,7 @@
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/21912">Conflict Begone (Archive Conflict Checker - User Mod Support)</a><p>This checks for visual quality mods and makes sure there are no conflicts. It's also a recommended dependency for Nova City</p>
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/13524">Night City Visuals Nulled</a><p>Required dependency for Nova City</p>
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/20808">ReLUX (Lighting Redux - Accurate Lighting)</a><p>The core file and all optionals, yes all of them. This is a recommended dependency for Nova City</p>
+    <a href="https://www.nexusmods.com/cyberpunk2077/mods/25845">ReImagined</a><p>Dependency for ReLUX</p>
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/18027">Weather Switcher (Change Weather - Control Time - Customize Clouds)</a><p>Required dependency for Nova City</p>
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/21214">Disable Quest Weather</a><p>This is an unlisted dependency for Nova City</p>
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/15585">No More Duplicate NPCs</a><p>Kind of self explanatory. Supposed to have a performance impact. I notice zero at 50%</p>
