--- a/cp2077modlist.html
+++ b/cp2077modlist.html
@@ -57,5 +57,7 @@
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/22694">Responsive V</a><p>Flavor.</p>
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/5013">Extended and Improved Headlights</a><p>Self explanatory.</p>
     <a href="https://www.nexusmods.com/cyberpunk2077/mods/23157">Auto Drive Enhanced</a><p>Gives some new options to auto drive. Also may be a solution to insane NPC drivers when you're riding along.</p>
+    <a href="https://www.nexusmods.com/cyberpunk2077/mods/8326">Kiroshi Optics Night Vision Mod</a><p>Self explanatory. Bind the key in mod settings.</p>
+    <a href="https://www.nexusmods.com/cyberpunk2077/mods/9991">Kiroshi Optics Night Vision - Colour Edits</a><p>Also somewhat self explanatory, I'm using the modern white desaturated version. Might be TOO good.</p>
 </body>
 </html>
