--- a/kcd2modlist.html
+++ b/kcd2modlist.html
@@ -43,10 +43,10 @@
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/787">Tasty Textures</A><p>Visual enhancement</p>
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/1340">ParticlesPlus</A><p>Visual enhancement. Main file only.</p>
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/517">Vertical Light Fix</A><p>Visual fix. You'll have to make a file edit as described in the posts tab for it to work.</p>
-    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/743">Easy To See Arrows And Bolts (Colored Feathers) NORMAL VERSION</A><p>Quality of life. You may not need it.</p>
-    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/716">No Food Decay - PTF (Optional No Weight) NO WEIGHT VERSION</A><p>I choose to minimize this nonsense's effect on my playthrough.</p>
+    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/743">Easy To See Arrows And Bolts (Colored Feathers)</A><p>Quality of life. You may not need it.</p>
+    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/716">No Food Decay - PTF (Optional No Weight)</A><p>I choose to minimize this nonsense's effect on my playthrough. Yes, the no weight version.</p>
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/758">No Need To Sleep - PTF</A><p>Fixes something TOTALLY unnecessary IMO. Sleeping is already a great way to heal and gets used. Don't force me to bed.</p>
-    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/247">Sneaky quiet armor JEWELRY VERSION</A><p>Just so I don't have to constantly switch equipment. If you think this convenience makes it so I'm more prepared, you're right! Wow weird.</p>
+    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/247">Sneaky quiet armor</A><p>Just so I don't have to constantly switch equipment. If you think this convenience makes it so I'm more prepared, you're right! Wow weird. I use the jewelry version.</p>
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/2805">KCD2 Mod Conflict Checker</A><p>This is a standalone tool you don't put in the Mods folder but it checks to make sure nothing is borked. If you use just this list it will show no conflicts.</p>
 </body>
 </html>
