--- a/kcd2modlist.html
+++ b/kcd2modlist.html
@@ -48,6 +48,9 @@
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/717">No Herbs Decay - PTF (Optional No Weight)</A><p>With this one I don't remove their weight but they don't go bad. It's nice to be able to pick some when I can and then have them for when I WANT to make potions.</p>
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/758">No Need To Sleep - PTF</A><p>Fixes something TOTALLY unnecessary IMO. Sleeping is already a great way to heal and gets used. Don't force me to bed.</p>
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/247">Sneaky quiet armor</A><p>Just so I don't have to constantly switch equipment. If you think this convenience makes it so I'm more prepared, you're right! Wow weird. I use the jewelry version.</p>
+    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/283">Easy Alchemy - ( Easier faster potion brewing crafting recipe )</A><p>A - never boil - never grind - never distill version only, no increased output. I think the alchemy is really cool the first dozen times.</p>
+    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/83">Easy Smithing</A><p>10x version and all optionals. I think the smithing is really cool but easy for me and just arduous. This makes it faster. TBH, if it could be even faster I'd use it.</p>
+    <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/442">Rebalanced Aiming (PTF) (Perk)</A><p>Base version. I probably fired 200 arrows in KCD1 before I installed a similar mod. I'm very very tired of Henry being worse firing his 200th arrow than I was firing my first.</p>
     <A HREF="https://www.nexusmods.com/kingdomcomedeliverance2/mods/2805">KCD2 Mod Conflict Checker</A><p>This is a standalone tool you don't put in the Mods folder but it checks to make sure nothing is borked. If you use just this list it will show no conflicts.</p>
 </body>
 </html>
